event details added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,16 +33,17 @@
   </nav>
 
 </div>-->
+
 <div class="body">
-    
-    <app-navbar></app-navbar>
-    
-    <div class=" container">
-        
-        <router-outlet></router-outlet>
-    
-    
-    </div>
+	
+	<app-navbar></app-navbar>
+	
+	<div class=" container">
+		
+		<router-outlet></router-outlet>
+	
+	
+	</div>
 </div>
 
 <!--
@@ -311,7 +312,7 @@
 	</div>
 </div>-->
 <!--<div class="container">
-	
+	0970152342
 	<div class="row mt-5 justify-content-center">
 		<div *ngFor="let item of events">
 			<div class="card card-custom mx-2 mb-3" style="max-width:175px">
@@ -326,3 +327,16 @@
 		
 	</div>
 </div>-->
+
+<!--<form [formGroup]="form" (ngSubmit)="submit()">
+	
+	<label>
+		Select departure time:
+		<kendo-timepicker
+				formControlName="departureTime"
+		
+		></kendo-timepicker>
+	</label>
+	<button type="submit">submit</button>
+</form>-->
+
