--- a/src/app/components/events-search/events-search.component.html
+++ b/src/app/components/events-search/events-search.component.html
@@ -1,1 +1,9 @@
-<p>events-search works!</p>
+<div class="container">
+	<div class="row top">
+		<div>
+			<div>category</div>
+		
+		</div>
+	</div>
+
+</div>
