--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -17,7 +17,7 @@
 			</li>
 			<li class="nav-item dropdown">
 				<a class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown"
-				   aria-haspopup="true" routerLink="/details" aria-expanded="false">
+				   aria-haspopup="true" routerLink="/search" aria-expanded="false">
 					details
 				</a>
 				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
