--- a/src/app/components/events-detail/events-detail.component.css
+++ b/src/app/components/events-detail/events-detail.component.css
@@ -29,9 +29,8 @@
 .entry-date {
     position: relative;
     height: 80px;
-    width: 80px;
-    border-color: #000000;
-    border: solid 1px;
+    width: 95px;
+    border: 1px solid #e9e9e9;
     margin: 5px 18px 5px 0;
 }
 
