--- a/src/app/components/events-search/events-search.component.html
+++ b/src/app/components/events-search/events-search.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5" style="justify-content: center">
+<div class="container mt-5 " style="justify-content: center">
 	
 	
 	<form [formGroup]="search" role="search">
@@ -81,7 +81,7 @@
 		
 		</div>
 	</form>
-	<div class="row" *ngIf="events">
+	<div class="row main" *ngIf="events">
 		
 		<div *ngFor="let event of events">
 			
