--- a/src/app/components/user/login/login.component.html
+++ b/src/app/components/user/login/login.component.html
@@ -1,1 +1,94 @@
-<p>login works!</p>
+<div #container class="container container-fluid" id="container">
+	<div class="forms-container">
+		<div class="signin-signup">
+			<form [formGroup]="login" action="#" class="sign-in-form">
+				<h2 class="title">Sign in</h2>
+				
+				
+				<div class="input-field">
+					<i class="fas fa-user"></i>
+					<input formControlName="userName" type="text" placeholder="Username"/>
+				</div>
+				<div class="input-field">
+					<i class="fas fa-lock"></i>
+					<input formControlName="passWord" type="password" placeholder="Password"/>
+				</div>
+				<input (click)="loginUser(login.value)" type="submit" value="Login" class="btn solid"/>
+				<p class="social-text">Or Sign in with social platforms</p>
+				<div class="social-media">
+					<a href="#" class="social-icon">
+						<i class="fab fa-facebook-f"></i>
+					</a>
+					<a href="#" class="social-icon">
+						<i class="fab fa-twitter"></i>
+					</a>
+					<a href="#" class="social-icon">
+						<i class="fab fa-google"></i>
+					</a>
+					<a href="#" class="social-icon">
+						<i class="fab fa-linkedin-in"></i>
+					</a>
+				</div>
+			</form>
+			<form [formGroup]="register" class="sign-up-form">
+				<h2 class="title">Sign up</h2>
+				<div class="input-field">
+					<i class="fas fa-user"></i>
+					<input formControlName="userName" type="text" placeholder="Username"/>
+				</div>
+				<div class="input-field">
+					<i class="fas fa-envelope"></i>
+					<input formControlName="email" type="email" placeholder="Email"/>
+				</div>
+				<div class="input-field">
+					<i class="fas fa-lock"></i>
+					<input formControlName="passWord" type="password" placeholder="Password"/>
+				</div>
+				<input (click)="registerUser(register.value)" type="submit" class="btn" value="Sign up"/>
+				<p class="social-text">Or Sign up with social platforms</p>
+				<div class="social-media">
+					<a href="#" class="social-icon">
+						<i class="fab fa-facebook-f"></i>
+					</a>
+					<a href="#" class="social-icon">
+						<i class="fab fa-twitter"></i>
+					</a>
+					<a href="#" class="social-icon">
+						<i class="fab fa-google"></i>
+					</a>
+					<a href="#" class="social-icon">
+						<i class="fab fa-linkedin-in"></i>
+					</a>
+				</div>
+			</form>
+		</div>
+	</div>
+	
+	<div class="panels-container">
+		<div class="panel left-panel">
+			<div class="content">
+				<h3>New here ?</h3>
+				<p>
+					Join us, by creating an account
+				</p>
+				<button (click)="signUp()" class="btn transparent" id="sign-up-btn">
+					Sign up
+				</button>
+			</div>
+			<img src="assets/svgs/log.svg" class="image" alt=""/>
+		</div>
+		<div class="panel right-panel">
+			<div class="content">
+				<h3>One of us ?</h3>
+				<p>
+					If you already have an account just log in .
+				</p>
+				<button (click)="signIn()" class="btn transparent" id="sign-in-btn">
+					Sign in
+				</button>
+			</div>
+			<img src="assets/svgs/ticket-monochrome.svg" class="image" alt=""/>
+		</div>
+	</div>
+</div>
+
